# Lead-iq

./: .env.example  .gitignore  .pre-commit-config.yaml  CHECKPOINT.md  CLAUDE.md  README.md  TODO.md  eslint.config.js  index.html  jest.config.mjs  next.config.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.json  vercel.json
backend/: .env.example  alembic.ini  audit_runner.py  main.py  pyproject.toml  requirements.txt  run_audit.py  run_audit.sh
backend/alembic/: env.py
backend/api/: deps.py  health.py  leads.py  mcp_server.py  schemas.py
backend/audit/: audit_runner.py  council_audit.py  run_audit.sh
backend/bot/: __init__.py  formatter.py  handler.py  notifier.py
backend/collectors/: __init__.py  base.py  github.py  hn.py  producthunt.py  reddit.py  rss.py  stackoverflow.py  telegram.py  twitter.py
backend/core/: config.py  redis_client.py
backend/events/: __init__.py  emitter.py
backend/ingestion/: README.md  __init__.py  cli.py  collectors.py  metrics.py  orchestrator.py
backend/llm/: SOURCE_PROMPTS.py  __init__.py  circuit_breaker.py  cost_guard.py  gemini_service.py
backend/models/: __init__.py  icp.py  lead.py  lead_dlq.py  lead_event.py
backend/schemas/: __init__.py
backend/services/: __init__.py  auth.py  confidence.py  crm_service.py  dedup_service.py  feature_flags.py  icp_service.py  intent_monitor.py  personalization.py  velocity.py  waterfall_enrichment.py
backend/shared/: __init__.py  config.py  db.py  deduper.py  logging_config.py  models.py  repository.py  stream.py
backend/tests/: conftest.py  (+9 more)
(+125 files in other folders)
