[project]
name = "b2b-intelligence"
version = "0.1.0"
description = "LeadIQ B2B intelligence backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "google-generativeai>=0.8.0",
  "google-cloud-aiplatform>=1.60.0",
  "praw>=7.8.0",
  "python-telegram-bot>=21.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "testcontainers[postgres,redis]>=4.8.2",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that require Docker-backed Postgres/Redis containers",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
